<resources>
    <string name="app_name">RAY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connexion">Connexion</string>
    <string name="courriel">Courriel</string>
    <string name="utilisateur_email_com">utilisateur@email.com</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="stars">******</string>
    <string name="logo">logo</string>
    <string name="se_connecter">Se connecter</string>
    <string name="pas_de_compte">Pas de compte ?</string>
    <string name="cliquez_ici_pour_se_cr_er_un_compte"><u>Cliquez ici pour se créer un compte</u></string>
    <string name="s_inscire">S\'inscire</string>
    <string name="ex_123_rue_st_catherine">Ex: 123 rue St-Catherine</string>
    <string name="ex_27">Ex: 27</string>
    <string name="janedoe_sample_com">janedoe@sample.com</string>
    <string name="retapez_le_mot_de_passe">Retapez le mot de passe</string>
    <string name="doe">Doe</string>
    <string name="jane">Jane</string>
    <string name="inscription">Inscription</string>
    <string name="pr_nom">Prénom</string>
    <string name="retour_la_connexion"><u>Retour à la connexion</u></string>
    <string name="confirmation_du_mot_de_passe">Confirmation du mot de passe</string>
    <string name="mot_de_passe2">Mot de passe</string>
    <string name="adresse">Adresse</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="ge">Âge</string>
    <string name="nom">Nom</string>
    <string name="_514_555_5555">514-555-5555</string>
    <string name="destination">Destination</string>
    <string name="budget">Budget</string>
    <string name="_0">0$</string>
    <string name="_02">0</string>
    <string name="_50_000">50 000$</string>
    <string name="rechercher">Rechercher</string>
    <string name="_100">100$</string>
    <string name="description_du_voyage">Description du voyage....</string>
    <string name="titre">Titre</string>
    <string name="image_de_l_evenement">Image de l\'evenement</string>
    <string name="_2500">2500$</string>
    <string name="mes_r_servations">Mes Réservations</string>
    <string name="annuler"><u>Annuler?</u></string>
    <string name="statut">Statut:</string>
    <string name="date_de_d_part">Date de départ:</string>
    <string name="qu_bec_qc">Québec, QC</string>
    <string name="visitez_la_plus">Visitez la plus vieille ville...Visitez la plus vieille ville...</string>
    <string name="dur_e_2_nuits">Durée : 2 nuits\nPrix : 50$ par personne</string>
    <string name="activit_s">Activités : ...</string>
    <string name="dates_offertes">Dates offertes :</string>
    <string name="_4_places_disponibles">4 places disponibles</string>
    <string name="r_server_maintenant">Réserver Maintenant</string>
    <string name="nombre_de_personnes">Nombre de personnes :</string>
    <string name="r_server">Réserver</string>
    <string name="nom_du_voyage">Nom du Voyage</string>
    <string name="annuler_votre_r_servation">Êtes-vous sûr de vouloir annuler votre réservation ?</string>
    <string name="annuler_oui">Annuler</string>
    <string name="retour">Retour</string>
</resources>