<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/listitem"
    android:padding="15dp"
    tools:context=".vues.adaptateurs.VoyageAdapter">

    <LinearLayout
        android:id="@+id/lvTextHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTitre"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/titre"
            android:textColor="@color/blanc"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtHeaderPrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_100"
            android:textAlignment="viewEnd"
            android:textColor="@color/blanc"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imgVoyage"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/image_de_l_evenement"
        app:srcCompat="@android:drawable/ic_dialog_alert" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blanc"
        android:textSize="16sp"
        android:text="@string/description_du_voyage" />
</LinearLayout>