<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/noir"
    android:padding="24dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ray_logo"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/box_background"
        android:padding="12dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/txtNomVoyage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:text="@string/nom_du_voyage"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter"
            android:gravity="center_vertical" />

        <ImageView
            android:id="@+id/imageVoyage"
            android:layout_width="130dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ray_logo"
            android:background="@drawable/rounded_image"
            android:clipToOutline="true"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtMessageConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/annuler_votre_r_servation"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:background="@drawable/box_background"
        android:padding="16dp"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btnAnnuler"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/annuler_oui"
        android:textStyle="bold"
        android:textSize="26dp"
        android:layout_marginHorizontal="70dp"
        android:background="@drawable/btn_rounded_corner"
        app:backgroundTint="@color/accent"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/btnRetour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retour"
        android:textStyle="bold"
        android:layout_marginTop="200dp"
        android:layout_marginHorizontal="100dp"
        android:textSize="20dp"
        android:background="@drawable/btn_rounded_corner"
        app:backgroundTint="@color/header"
        android:backgroundTint="@color/header"
        android:textColor="@android:color/white" />
</LinearLayout>
